--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -4,11 +4,11 @@ CFLAGS=-c -Wall
 
 all: awesome
 
-awesome: MyAwesome.o main.o
-			$(CC) MyAwesome.o main.o
+awesome: MyAwesome.o main.o PhoneBook.o
+			$(CC) MyAwesome.o main.o PhoneBook.o
 
-megaphone.o: MyAwesome.cpp main.cpp
-			$(CC) $(CFLAGS) MyAwesome.cpp main.cpp
+megaphone.o: MyAwesome.cpp main.cpp PhoneBook.cpp
+			$(CC) $(CFLAGS) MyAwesome.cpp main.cpp PhoneBook.cpp
 
 clean:
 		rm -rf *o MyAwesome a.out 
