--- a/rush00/Makefile
+++ b/rush00/Makefile
@@ -5,14 +5,9 @@ SRC :=  main.cpp \
         GameEngine.cpp \
         Player.cpp \
         Bullet.cpp \
-        Visual.cpp
-
-HEADERS := main.cpp \
-        Entity.cpp \
-        GameEngine.cpp \
-        Player.cpp \
-        Bullet.cpp \
-        Visual.cpp
+        Visual.cpp \
+        Enemy.cpp \
+        Comet.cpp
 
 SRC := $(addprefix $(SRC_DIR), $(SRC))
 OBJ := $(subst $(SRC_DIR), $(OBJ_DIR), $(SRC:.cpp=.o))
@@ -24,7 +19,7 @@ all: $(NAME)
 
 $(NAME): $(OBJ)
 	$(CC) $(FLAGS) -o $@ $^ -lncurses
-	@echo "\033[0;32m$@ was created"
+	@echo "\033[0;32m$@ was created\033[0m"
 
 $(OBJ_DIR)%.o: $(SRC_DIR)%.cpp
 	@mkdir -p $(OBJ_DIR)
